# Contact-Tracing

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  dockerfile  find_names.py  mlflow.db  pyproject.toml
.github/workflows/: ci.yml
data/: contact_tracking.json
mlruns/1/models/m-0de9898825054cff94b8f2806c93e771/artifacts/: MLmodel
mlruns/1/models/m-15e8f0c720ec41adbf1e46ddf0968129/artifacts/: MLmodel  conda.yaml
mlruns/1/models/m-2eb0e23ef7f140f3b3127e64e95a5141/artifacts/: MLmodel  model.pkl
mlruns/1/models/m-4352521589c14c68af71dbf094653f0f/artifacts/: MLmodel
mlruns/1/models/m-5150a3ec533544cda2eefdb54756eb4e/artifacts/: MLmodel
mlruns/1/models/m-b5612f3414ab41899009d8049a16e1b8/artifacts/: MLmodel
mlruns/1/models/m-b9cb364094ba4c4eb51da6d2132cf200/artifacts/: MLmodel  model.pkl
mlruns/1/models/m-c69f02d8d58a40ba890d27e5e94112bd/artifacts/: MLmodel  model.pkl
mlruns/1/models/m-d6d29b12b1204f41a0c157f4eb33d666/artifacts/: MLmodel
mlruns/1/models/m-d87a764973a443aba10777df8bb7e4f9/artifacts/: MLmodel  requirements.txt
src/: app.py  preprocessing.py  train.py
tests/: test_app.py  test_preprocessing.py  test_train.py
