[project]
name = "mlops-contact-tracing"
version = "0.1.0"
description = "Contact tracing using DBSCAN and GPS data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.6",
    "httpx>=0.28.1",
    "matplotlib>=3.9.0",
    "mlflow>=3.9.0",
    "numpy>=2.1.0",
    "pandas>=2.2.0",
    "pre-commit>=4.5.1",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "scikit-learn>=1.5.0",
    "seaborn>=0.13.0",
    "uvicorn>=0.40.0",
]
